# console

./: Cargo.toml
console-api/: Cargo.toml
console-api/proto/: common.proto  tasks.proto
console-subscriber/: Cargo.toml
console-subscriber/examples/: app.rs
console-subscriber/src/: builder.rs  lib.rs
console-subscriber/src/aggregator/: mod.rs
tokio-console/: Cargo.toml
tokio-console/src/state/: mod.rs  tasks.rs
tokio-console/src/view/: mod.rs  task.rs
